--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,7 @@ body {
 }
 
 .navigation {
-    background-color: #202912;
-    color: #e6dfad;
+    color: var(--fern-green);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -42,8 +41,8 @@ body {
 }
 
 .navigation a:hover {
-    background-color: #f7f780fc;
-    color: black;
+    background-color: var(--raw-umber);
+    color: var(--non-photo-blue);
 }
 
 .banner {
@@ -82,10 +81,12 @@ body {
     max-width: 20ch;
     text-align: center;
 }
+
 .main-footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: var(--fern-green);
 }
 .social {
     display: flex;
@@ -97,12 +98,13 @@ body {
     padding: 0.5em;
 }
 .social a:hover {
-    background-color: white;
+    background-color: var(--mindaro);
 }
 .content {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
+    margin: 4rem 2rem;
 }
 img {
     max-width: 100%;
@@ -111,4 +113,5 @@ img {
     aspect-ratio: 16/9;
     object-fit: cover;
     object-position: center;
+    min-width: 100%;
 }
